src/test/ui/issues/issue-11692-1.stderr
error: cannot find macro `testo!` in this scope
  --> $DIR/issue-11692-1.rs:2:12
   |
LL |     print!(testo!());
   |            ^^^^^

error: aborting due to previous error

